# CTP_API_DEMO

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  simnow.out
dependencies/include/gtest/: gtest.h
doc/: test.plantuml
include/: coredump.h  plantformtools.h
include/api/ctp/: ThostFtdcTraderApi.h
include/apiWrapper/ctp/: MyCtpApi.h  MyCtpSpi.h  MyMarketApi.h  MyMarketSpi.h
runtime/: Private.con  Public.con  TradingDay.con  config.txt  ctp_base_qry_test  ctp_md_sub_test  ctp_order_time_record_test  ctpdemo  ctptest  instruments.txt  learning  market_data.txt  orderinserttest  out.txt  simnow.out  start.sh
runtime/instr/: 1.txt
src/: main.cpp
src/ctp/: MyCtpApi.cpp  MyCtpSpi.cpp  MyMarketApi.cpp  MyMarketSpi.cpp
test/: main.cpp  test_base_qry.cpp  test_base_qry.h  test_md_sub.cpp  test_md_sub.h  test_order_insert.cpp  test_order_insert.h  test_order_time_record.cpp  test_order_time_record.h  test_suit.h  test_suit_md.h  test_suit_trade.h
