cmake_minimum_required(VERSION 3.17)


#è®¾å®švckpg è·?å¾?
#SET(CMAKE_TOOLCHAIN_FILE, /to/your/vcpkgpath)


project(ctp_demo)


#è®¾å®šCPPç‰ˆæœ¬
set(CMAKE_CXX_STANDARD 11)


add_compile_options(-DENVSIMNOW)


include_directories(include)

link_directories(lib)


#æ‰?æsrcç›?å½?, è·å–.c .cpp æºç æ–‡ä»¶åˆ—è¡¨
file(GLOB_RECURSE DIR_SRCS ./src/*.cpp  ./src/*.c ./src/*/*.cpp)
file(GLOB_RECURSE TEST_SRCS ./test/test_order_insert.cpp ./src/ctp/*.cpp)
file(GLOB_RECURSE TEST_SRCS1 ./test/test_md_sub.cpp ./src/ctp/*.cpp)
file(GLOB_RECURSE TEST_SRCS2 ./test/test_order_time_record.cpp ./src/ctp/*.cpp)
file(GLOB_RECURSE TEST_SRCS3 ./test/test_base_qry.cpp ./src/ctp/*.cpp)


# å?æ‰§è?Œæ–‡ä»¶è¾“å‡ºç›®å½?
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/runtime)


#ä½¿ç”¨æºç åˆ—è¡¨ç”Ÿæˆå?æ‰§è?Œæ–‡ä»?
ADD_EXECUTABLE(ctpdemo ${DIR_SRCS})
ADD_EXECUTABLE(orderinserttest ${TEST_SRCS})
ADD_EXECUTABLE(ctp_md_sub_test ${TEST_SRCS1})
ADD_EXECUTABLE(ctp_order_time_record_test ${TEST_SRCS2})
ADD_EXECUTABLE(ctp_base_qry_test ${TEST_SRCS3})


target_link_libraries(ctpdemo thostmduserapi_se thosttraderapi_se pthread)
target_link_libraries(orderinserttest thosttraderapi_se thostmduserapi_se gtest pthread)
target_link_libraries(ctp_md_sub_test thosttraderapi_se thostmduserapi_se gtest pthread)
target_link_libraries(ctp_order_time_record_test thosttraderapi_se thostmduserapi_se gtest pthread)
target_link_libraries(ctp_base_qry_test thosttraderapi_se thostmduserapi_se gtest pthread)